{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 115,
  "lineage": "a01395d1-8dbb-29ce-2a80-36b9ddce533d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fce88642193c996e",
            "arn": "arn:aws:ec2:us-east-1:666132446347:elastic-ip/eipalloc-0fce88642193c996e",
            "association_id": "eipassoc-01096ca69c3fd8f1d",
            "domain": "vpc",
            "id": "eipalloc-0fce88642193c996e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d1e35975c5e5d5a6",
            "private_dns": "ip-10-0-0-9.ec2.internal",
            "private_ip": "10.0.0.9",
            "public_dns": "ec2-44-209-78-48.compute-1.amazonaws.com",
            "public_ip": "44.209.78.48",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1bed4f06a3b463d",
            "arn": "arn:aws:ec2:us-east-1:666132446347:instance/i-0c7f835655948b321",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7f835655948b321",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b136d8e8cb577a98",
            "private_dns": "ip-10-0-0-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca44ee26198125de",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8e37063488a0fa3",
            "tags": {
              "Name": "tf_ec2"
            },
            "tags_all": {
              "Name": "tf_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab7a22138847daff"
            ]
          },
          "dependencies": [
            "aws_subnet.first-subnet",
            "aws_vpc.terraform-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666132446347:internet-gateway/igw-0de7864cf99d720c3",
            "id": "igw-0de7864cf99d720c3",
            "owner_id": "666132446347",
            "tags": {
              "Name": "new-igw"
            },
            "tags_all": {
              "Name": "new-igw"
            },
            "vpc_id": "vpc-057be4011975d551d"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fce88642193c996e",
            "association_id": "eipassoc-01096ca69c3fd8f1d",
            "connectivity_type": "public",
            "id": "nat-02819c7b5a9a83168",
            "network_interface_id": "eni-0d1e35975c5e5d5a6",
            "private_ip": "10.0.0.9",
            "public_ip": "44.209.78.48",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a8e37063488a0fa3",
            "tags": {
              "Name": "new-nat"
            },
            "tags_all": {
              "Name": "new-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.first-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666132446347:route-table/rtb-008e05edb7c6ec7f6",
            "id": "rtb-008e05edb7c6ec7f6",
            "owner_id": "666132446347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02819c7b5a9a83168",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-057be4011975d551d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ngt",
            "aws_subnet.first-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666132446347:route-table/rtb-08ac45375f94484c9",
            "id": "rtb-08ac45375f94484c9",
            "owner_id": "666132446347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de7864cf99d720c3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-057be4011975d551d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f581ea816641ae1",
            "route_table_id": "rtb-008e05edb7c6ec7f6",
            "subnet_id": "subnet-0c3db0ea7582e9c45"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ngt",
            "aws_route_table.private_rt",
            "aws_subnet.first-subnet",
            "aws_subnet.second-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b134bbe72fb15d90",
            "route_table_id": "rtb-08ac45375f94484c9",
            "subnet_id": "subnet-0a8e37063488a0fa3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.first-subnet",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "first-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666132446347:subnet/subnet-0a8e37063488a0fa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8e37063488a0fa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666132446347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "first-subnet"
            },
            "tags_all": {
              "Name": "first-subnet"
            },
            "vpc_id": "vpc-057be4011975d551d"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "second-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666132446347:subnet/subnet-0c3db0ea7582e9c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.128/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3db0ea7582e9c45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666132446347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "second-subnet"
            },
            "tags_all": {
              "Name": "second-subnet"
            },
            "vpc_id": "vpc-057be4011975d551d"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666132446347:vpc/vpc-057be4011975d551d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0680ac5a62424c0f7",
            "default_route_table_id": "rtb-0fa2e578445d72763",
            "default_security_group_id": "sg-0ab7a22138847daff",
            "dhcp_options_id": "dopt-036f256ce8dbb619c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-057be4011975d551d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa2e578445d72763",
            "owner_id": "666132446347",
            "tags": {
              "name": "Terraform-VPC"
            },
            "tags_all": {
              "name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}